--- a/config/00_row_data.config
+++ b/config/00_row_data.config
@@ -1,3 +1,7 @@
 [param]
-work_dir = /data_center_06/Project/RY2014D20C01-1
-sample_name = %(work_dir)s/sample_name.txt
+work_dir =
+sample_name =
+[outfiles]
+out_dir =
+[script]
+01_rawlink = workflow/script/01_rawlink.py
