--- a/config/05.gene_catalog.config
+++ b/config/05.gene_catalog.config
@@ -1,7 +1,10 @@
 [param]
-work_dir =
-sample_name =
-[outfiles]
-out_dir =
+work_dir=
+sample_name=
+group=
 [script]
-01_rawlink = workflow/script/01_rawlink.py
+01_rawlink= workflow/script/01_rawlink.py
+[input]
+input_dir=
+[output]
+output_dir =
