--- a/work.cfg
+++ b/work.cfg
@@ -5,3 +5,21 @@ step_names_order = 01.clean_reads,03.assembly,04.gene_predict,05.gene_catalog,06
 work_dir = /data_center_06/Project/Intestine_Mucosal/
 sample_name =%(work_dir)s/../sample_list/sample.list
 group=%(work_dir)s/../group/group1.txt %(work_dir)s/../group/group2.txt
+
+
+[project]
+#must option
+project_name = ABC
+customer_name = qianxun
+project_num = RY2015J2703
+sample_source = soil compost
+sample_type = soil
+note_information = XXX
+project_contacts = huangy
+phone = 123344555
+email = 222@qq.com
+enterprise_name = The university of xi bei
+enterprise_address = shanxisheng
+salesman = wanghang
+sale_phone = 2333345
+sale_email = 433@qq.com
